kubernetes/istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: autocura-cognitiva-mtls
  namespace: autocura-cognitiva
spec:
  mtls:
    mode: STRICT
