kubernetes/istio/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoramento
  labels:
    istio-injection: enabled
    isolation: strict
---
apiVersion: v1
kind: Namespace
metadata:
  name: diagnostico
  labels:
    istio-injection: enabled
    isolation: strict
---
apiVersion: v1
kind: Namespace
metadata:
  name: gerador-acoes
  labels:
    istio-injection: enabled
    isolation: strict
---
apiVersion: v1
kind: Namespace
metadata:
  name: observabilidade
  labels:
    istio-injection: enabled
    isolation: strict
